// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching a regular search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SEARCH_HISTORY_PUSH",
  "VIEWER_CLEAR",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "CHART_CLEAR",
  "CHART_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
]
`;

exports[`fetching an analytic search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SEARCH_HISTORY_PUSH",
  "VIEWER_CLEAR",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
]
`;

exports[`fetching an analytic search without history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "VIEWER_CLEAR",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
]
`;

exports[`fetching an zoom search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SEARCH_HISTORY_PUSH",
  "VIEWER_CLEAR",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
]
`;

exports[`fetching an zoom search without history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "VIEWER_CLEAR",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
]
`;

exports[`not saving a search to history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "VIEWER_CLEAR",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "CHART_CLEAR",
  "CHART_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
]
`;
